Finessed some CSS

--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -11,8 +11,8 @@
 }
 
 body {
-  font-size: 11px;
   font-family: 'Noto Sans', times;
+  font-size: 11px;
 }
 
 .container {
@@ -30,18 +30,11 @@ body {
 form > input {
   border: 1px solid lightgrey;
   border-radius: 2px;
-
+  letter-spacing: .3px;
 }
 
 form > input:not([type="submit"]):focus {
   outline: none;
   border:1px solid #F4A460;
-  box-shadow: 0 0 30px orange;
-}
-
-img:hover {
-  width: 50px;
-  height: 50px;
-  transform: rotate(20deg);
-
+  box-shadow: 0 0 25px orange;
 }
