--- a/app/assets/stylesheets/login_form.css
+++ b/app/assets/stylesheets/login_form.css
@@ -26,3 +26,8 @@
 #login-form input[type="submit"]:hover {
   background: rgb(80,65,40);
 }
+
+#login-form input[type="submit"]:focus {
+  outline: none;
+  box-shadow: 0 0 5px rgb(80,65,40);
+}
