--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -6,13 +6,16 @@
   font-family: inherit;
   font-size: inherit;
   display: block;
+}
 
-
+script {
+  display: none;
 }
 
 body {
   font-family: 'Noto Sans', times;
   font-size: 11px;
+
 }
 
 .container {
@@ -29,7 +32,7 @@ body {
 
 form > input {
   border: 1px solid lightgrey;
-  border-radius: 2px;
+  border-radius: 2.5px;
   letter-spacing: .3px;
 }
 
@@ -37,4 +40,9 @@ form > input:not([type="submit"]):focus {
   outline: none;
   border:1px solid #F4A460;
   box-shadow: 0 0 25px orange;
+}
+
+strong {
+  display: inline-block;
+  transform: rotate(90deg);
 }
