--- a/app/assets/stylesheets/landing-page.css
+++ b/app/assets/stylesheets/landing-page.css
@@ -1,9 +1,11 @@
+
+
 #landing-page nav {
   padding: 20px 0 8px;
   border-bottom: 2px solid red;
 }
 
-#landing-page nav h1 {
+#crud {
   float: left;
   font-size: 40px;
   letter-spacing: .5em;
