Shelves have been added... sort of.

--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -6,6 +6,9 @@
   font-family: inherit;
   font-size: inherit;
   display: block;
+  border-radius: 2px;
+  text-decoration: none;
+  color: black;
 }
 
 script {
