--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -45,3 +45,10 @@ input:not([type="submit"]):focus {
   border:1px solid #F4A460;
   box-shadow: 0 0 25px orange;
 }
+
+em {
+  padding: 2px;
+  display:inline;
+  font-style: normal;
+  background: rgb(255, 216, 158);
+}
