jpeg does NOT work in rails

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -4,5 +4,5 @@
 
 
 <script>
-  window.default_avatar = "<%= image_path("blank.jpeg") %>"
+  window.default_avatar = "<%= image_path("blank.jpg") %>"
 </script>
