--- a/app/assets/stylesheets/general.css
+++ b/app/assets/stylesheets/general.css
@@ -54,7 +54,7 @@ em {
   background: rgb(252, 215, 146);
 }
 
-input[type="submit"] {
+/*input[type="submit"] {
   border: none;
 
   padding: 6px 10px 6px;
@@ -69,4 +69,8 @@ input[type="submit"]:hover {
 input[type="submit"]:focus {
   outline: none;
   box-shadow: 0 0 5px #382110;
+}*/
+
+.hover-hand {
+  cursor: pointer; cursor: hand;
 }
