--- a/app/assets/stylesheets/signup_form.css
+++ b/app/assets/stylesheets/signup_form.css
@@ -1,8 +1,9 @@
 #signup-form {
-  float: right;
-  margin: 8px 15px;
-  font-size: 13px;
+  margin: auto;
+  width: 80.2%;
+  font-size: 50px;
 }
+
 
 #signup-form * {
   margin-bottom: 5px;
@@ -14,8 +15,17 @@
   font-weight: bold
 }
 
+.amatic {
+  font-family: 'Amatic SC';
+  letter-spacing: 0.4px;
+  font-weight: bold
+
+}
+
 #signup-form header {
-  font-size: 32px;
+  text-align: center;
+  font-size: 66px;
+  margin-bottom: -5px;
 }
 
 #signup-form input{
@@ -24,11 +34,12 @@
 
 #signup-form input:not([type="submit"]) {
   width: calc(100%);
+  height: 90px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 #signup-form input[type="submit"] {
-  font-size: 28px;
-  padding: 0px 5px;
   margin-top: 6px;
   color: black;
   background: #fcd05f;
@@ -44,6 +55,51 @@
   box-shadow: 0 0 5px #fcd05f;
 }
 
-#signup-form form{
-  /*float: left;*/
+.form-bottom input {
+  float: left;
+}
+
+#guest {
+  float: left;
+  padding: 0px 5px;
+  border: none;
+
+  padding: 5px 10px 5px;
+  color: white !important;
+  background: #382110 !important;
+}
+
+#guest:hover {
+  background: #573216 !important;
+}
+
+#guest:focus {
+  outline: none;
+  box-shadow: 0 0 5px #382110 !important;
+}
+
+.size {
+  font-size: 40px;
+}
+.form-bottom {
+  margin: 10px 38px;
+  font-size: 35px;
+}
+.form-bottom input[type="submit"], .form-bottom a {
+  padding: 5px 14px !important;
+}
+
+.form-bottom a {
+  float: left;
+  padding: 4px 14px 0px !important;
+  margin-top: 6px;
+  color: white;
+  background: #00aced
+}
+
+.form-bottom img {
+  float: right;
+  width: 46px;
+  margin-left: 6px;
+  background: rgb(0, 172, 237);
 }
