Updated seeds a bit

--- a/app/assets/stylesheets/signup_form.css
+++ b/app/assets/stylesheets/signup_form.css
@@ -94,7 +94,8 @@
   padding: 4px 14px 0px !important;
   margin-top: 6px;
   color: white;
-  background: #00aced
+  background: #00aced;
+
 }
 
 .form-bottom img {
