--- a/app/assets/stylesheets/browse-item.css
+++ b/app/assets/stylesheets/browse-item.css
@@ -1,5 +1,8 @@
 .browse-item {
   margin-top: 10px;
+  border-bottom: 1px solid lightgrey;
+  margin-bottom: 16px;
+  padding-bottom: 16px;
 }
 
 .browse-item .link {
