--- a/app/assets/stylesheets/login_form.css
+++ b/app/assets/stylesheets/login_form.css
@@ -18,3 +18,20 @@
 #login-form input[type="submit"] {
   margin-left: 3px;
 }
+
+.login-button{
+  border: none;
+
+  padding: 6px 10px 6px;
+  color: white;
+  background: #382110;
+}
+
+.login-button:hover {
+  background: #573216;
+}
+
+.login-button:focus {
+  outline: none;
+  box-shadow: 0 0 5px #382110;
+}
